--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 #DBConfiguration:
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://tmlh.xyz/spider?useUnicode=true&characterEncoding=utf8
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.driverClassName= 
+spring.datasource.url= 
+spring.datasource.username= 
+spring.datasource.password= 
